--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "email": "fred@juhlin.me"
   },
   "license": "MIT",
+  "main": "VapixWrapper.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/pandosme/node-VapixWrapper.git"
